# global-gaming-leaderboard

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.githooks/: pre-commit
.github/workflows/: ci.yml
scripts/: demo.sh  seed.sh
src/: config.py  main.py
src/api/: dependencies.py  routes.py
src/models/: schemas.py
src/services/: leaderboard.py
src/storage/: leaderboard_store.py  postgres_store.py  redis_store.py
tests/: conftest.py  test_api.py
